[gd_scene load_steps=15 format=3 uid="uid://dromthdvv7w0r"]

[ext_resource type="Script" path="res://Ending/ending.gd" id="1_bf033"]
[ext_resource type="Texture2D" uid="uid://drpfqn7nesv57" path="res://World/ice.png" id="2_0aqcd"]
[ext_resource type="Texture2D" uid="uid://dnajo6qu8xb5u" path="res://World/Player/player.png" id="3_4egau"]
[ext_resource type="Texture2D" uid="uid://b7l5l2bdvrejo" path="res://World/Door/door.png" id="3_sfvmj"]
[ext_resource type="AudioStream" uid="uid://bjoeao0fokwrx" path="res://Audio/click.wav" id="5_lyw2v"]
[ext_resource type="AudioStream" uid="uid://bkjnaigha7sbo" path="res://Music/Ice Cave.mp3" id="6_pjyne"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mnepq"]
texture = ExtResource("2_0aqcd")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_4657i"]
tile_size = Vector2i(32, 32)
sources/1 = SubResource("TileSetAtlasSource_mnepq")

[sub_resource type="AtlasTexture" id="AtlasTexture_pao27"]
atlas = ExtResource("3_4egau")
region = Rect2(0, 0, 37, 74)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lbr2"]
atlas = ExtResource("3_4egau")
region = Rect2(37, 0, 37, 74)

[sub_resource type="SpriteFrames" id="SpriteFrames_kck30"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pao27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lbr2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_rk0ys"]
font_size = 50

[sub_resource type="Animation" id="Animation_o4w8l"]
resource_name = "Ending"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerCharacter:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.8),
"transitions": PackedFloat32Array(1, 1.03526),
"update": 0,
"values": [Vector2(166, 475), Vector2(823, 475)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerCharacter:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3, 4.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n5sic"]
_data = {
"Ending": SubResource("Animation_o4w8l")
}

[node name="Ending" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bf033")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0.294118, 0.294118, 0.294118, 1)
layout_mode = 0
offset_right = 950.0
offset_bottom = 650.0
texture = ExtResource("2_0aqcd")
stretch_mode = 1

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_4657i")
format = 2
layer_0/tile_data = PackedInt32Array(1048576, 1, 0, 1114112, 1, 0, 1179648, 1, 0, 1245184, 1, 0, 1310720, 1, 0, 1048577, 1, 0, 1114113, 1, 0, 1179649, 1, 0, 1245185, 1, 0, 1310721, 1, 0, 1048578, 1, 0, 1114114, 1, 0, 1179650, 1, 0, 1245186, 1, 0, 1310722, 1, 0, 1048579, 1, 0, 1114115, 1, 0, 1179651, 1, 0, 1245187, 1, 0, 1310723, 1, 0, 1048580, 1, 0, 1114116, 1, 0, 1179652, 1, 0, 1245188, 1, 0, 1310724, 1, 0, 1048581, 1, 0, 1114117, 1, 0, 1179653, 1, 0, 1245189, 1, 0, 1310725, 1, 0, 1048582, 1, 0, 1114118, 1, 0, 1179654, 1, 0, 1245190, 1, 0, 1310726, 1, 0, 1048583, 1, 0, 1114119, 1, 0, 1179655, 1, 0, 1245191, 1, 0, 1310727, 1, 0, 1048584, 1, 0, 1114120, 1, 0, 1179656, 1, 0, 1245192, 1, 0, 1310728, 1, 0, 1048585, 1, 0, 1114121, 1, 0, 1179657, 1, 0, 1245193, 1, 0, 1310729, 1, 0, 1048586, 1, 0, 1114122, 1, 0, 1179658, 1, 0, 1245194, 1, 0, 1310730, 1, 0, 1048587, 1, 0, 1114123, 1, 0, 1179659, 1, 0, 1245195, 1, 0, 1310731, 1, 0, 1048588, 1, 0, 1114124, 1, 0, 1179660, 1, 0, 1245196, 1, 0, 1310732, 1, 0, 1048589, 1, 0, 1114125, 1, 0, 1179661, 1, 0, 1245197, 1, 0, 1310733, 1, 0, 1048590, 1, 0, 1114126, 1, 0, 1179662, 1, 0, 1245198, 1, 0, 1310734, 1, 0, 1048591, 1, 0, 1114127, 1, 0, 1179663, 1, 0, 1245199, 1, 0, 1310735, 1, 0, 1048592, 1, 0, 1114128, 1, 0, 1179664, 1, 0, 1245200, 1, 0, 1310736, 1, 0, 1048593, 1, 0, 1114129, 1, 0, 1179665, 1, 0, 1245201, 1, 0, 1310737, 1, 0, 1048594, 1, 0, 1114130, 1, 0, 1179666, 1, 0, 1245202, 1, 0, 1310738, 1, 0, 1048595, 1, 0, 1114131, 1, 0, 1179667, 1, 0, 1245203, 1, 0, 1310739, 1, 0, 1048596, 1, 0, 1114132, 1, 0, 1179668, 1, 0, 1245204, 1, 0, 1310740, 1, 0, 1048597, 1, 0, 1114133, 1, 0, 1179669, 1, 0, 1245205, 1, 0, 1310741, 1, 0, 1048598, 1, 0, 1114134, 1, 0, 1179670, 1, 0, 1245206, 1, 0, 1310742, 1, 0, 1048599, 1, 0, 1114135, 1, 0, 1179671, 1, 0, 1245207, 1, 0, 1310743, 1, 0, 1048600, 1, 0, 1114136, 1, 0, 1179672, 1, 0, 1245208, 1, 0, 1310744, 1, 0, 1048601, 1, 0, 1114137, 1, 0, 1179673, 1, 0, 1245209, 1, 0, 1310745, 1, 0, 1048602, 1, 0, 1114138, 1, 0, 1179674, 1, 0, 1245210, 1, 0, 1310746, 1, 0, 1048603, 1, 0, 1114139, 1, 0, 1179675, 1, 0, 1245211, 1, 0, 1310747, 1, 0, 1048604, 1, 0, 1114140, 1, 0, 1179676, 1, 0, 1245212, 1, 0, 1310748, 1, 0, 1048605, 1, 0, 1114141, 1, 0, 1179677, 1, 0, 1245213, 1, 0, 1310749, 1, 0, 28, 1, 0, 65564, 1, 0, 131100, 1, 0, 196636, 1, 0, 262172, 1, 0, 327708, 1, 0, 393244, 1, 0, 458780, 1, 0, 524316, 1, 0, 589852, 1, 0, 655388, 1, 0, 720924, 1, 0, 786460, 1, 0, 851996, 1, 0, 917532, 1, 0, 983068, 1, 0, 29, 1, 0, 65565, 1, 0, 131101, 1, 0, 196637, 1, 0, 262173, 1, 0, 327709, 1, 0, 393245, 1, 0, 458781, 1, 0, 524317, 1, 0, 589853, 1, 0, 655389, 1, 0, 720925, 1, 0, 786461, 1, 0, 851997, 1, 0, 917533, 1, 0, 983069, 1, 0)

[node name="Door" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(824, 472)
texture = ExtResource("3_sfvmj")

[node name="PlayerCharacter" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(166, 475)
sprite_frames = SubResource("SpriteFrames_kck30")
autoplay = "default"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -268.0
offset_top = -196.0
offset_right = 269.0
offset_bottom = 89.0
grow_horizontal = 2
grow_vertical = 2
text = "You Got Out!

Thank You For Playing!"
label_settings = SubResource("LabelSettings_rk0ys")
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 952.0
offset_bottom = 671.0
color = Color(0, 0, 0, 1)

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 415.0
offset_top = 545.0
offset_right = 536.0
offset_bottom = 588.0
text = "Back To Menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_n5sic")
}

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_lyw2v")

[node name="IceCaveMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_pjyne")
autoplay = true

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
